<resources>
    <string name="app_name">LIP</string>
    <string name="login">Verify Mobile Number</string>
    <string name="registration">Registration</string>
    <string name="otp">OTP Authentication</string>
    <string name="hint_login">Enter Your Mobile Number</string>
    <string name="hint_otpw">Enter One Time Password</string>
    <string name="hint_terms">I agree to LIP Terms of services and privacy policy</string>
    <string name="txt_otp">One Time Password (OTP) has been sent to your mobile number, please enter the same here to Login / Register</string>
    <string name="language_selection">Select Language</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="g_id">Grievance ID</string>
    <string name="reason">Reason for Appointment :</string>
    <string name="post">Posted On</string>
    <string name="post_feedback">Post Your Feedback</string>
    <string name="app_details"> Appointment Details</string>
    <string name="app_id"> Appointment id</string>
    <string name="txt_rate">Rate our service</string>
    <string name="txt_what">What would you share with us ?</string>
    <string name="languageSelectionEn">Select Language</string>
    <string name="tamil">हिंदी</string>
    <string name="news">News</string>
    <string name="schemes">Schemes</string>
    <string name="announcement">Announcement</string>
    <string name="survey_title">Your survey would help you better for making better Governance</string>
    <string name="voter">VOTER ID</string>
    <string name="check_availability">Check Availability</string>
    <string name="appointment_history">Appointment History</string>
    <string name="survey_end_txt">For Participating in Survey</string>
    <string name="txt_Payment_Summery">Payment Summary</string>
    <string name="txt_Sub_Total">Sub Total ( INR )</string>
    <string name="txt_Shipping_Amount">Shipping Amount ( INR )</string>
    <string name="txt_TOTAL">TOTAL ( INR )</string>
    <string name="txt_Supplied_by">Supplied by : </string>
    <string name="txt_Remove">Remove</string>
    <string name="txt_DELIVER_TO">DELIVER TO</string>
    <string name="txt_Quantity">Quantity :</string>
    <string name="txt_Communication">Communication and Delivery Address</string>
    <string name="txt_As_Registered_details"> As same as the Registered details</string>
    <string name="txt_order_id">Order ID</string>
    <string name="txt_order_placed">Order Placed on </string>
    <string name="txt_items">Items </string>
    <string name="txt_amount">Amount ( INR )</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_submit_appointment">Submit</string>
    <string name="btn_check_availability">CHECK AVAILABILITY</string>
    <string name="btn_started">get Started</string>
    <string name="btn_calcel">Cancel</string>
    <string name="btn_next">Next</string>
    <string name="btn_reotp">Resend OTP</string>
    <string name="btn_verify">Verify</string>
    <string name="btn_participating">INTERESTED</string>
    <string name="btn_confirm_time">Confirm</string>
    <string name="btn_grievance_history">History</string>
    <string name="btn_Start_Survey">Start Survey</string>
    <string name="btn_Finish_Survey">Finish</string>
    <string name="start_survey">Start Survey</string>
    <string name="btn_Place_Order">Place Order</string>
    <string name="btn_Proceed_to_pay">Proceed to Pay</string>
    <string name="btn_Save_and_proceed">Save and proceed</string>
    <string name="btn_Apply_Filter">Apply Filter</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_appointment">Appointment</string>
    <string name="menu_grievance">Grievance</string>
    <string name="menu_settings">Settings</string>
    <string name="get_started">Welcome to LIP Citizen Engagement Platform!</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email ID</string>
    <string name="hint_character">200 characters left</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="hint_peoples">How many people are going to meet ?</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="hint_address">Address</string>
    <string name="hint_pincode">Pin Code</string>
    <string name="hint_state">State</string>
    <string name="hint_constituency">Constituency</string>
    <string name="hint_district">District</string>
    <string name="hint_idnum">ID Number</string>
    <string name="hint_enter_txt">Enter your text here</string>
    <string name="How_txt">How many peopeles are going to meet ?</string>
    <string name="ch_time_slot">Choose Your Time Slot</string>
    <string name="check">Check Timings</string>
    <string name="time_slot">Time Slot</string>
    <string name="pre_time">Thanks for choosing your prefered timingto meet.you have selected your appointment on 7th June 2016 @ 13:00 hours please confirm your appointment click the bellow link</string>
    <string name="detail_person">DETAILS OF PERSON TO BE MET</string>
    <string name="name_txt">Appointment with </string>
    <string name="Role_txt">Role of the Person</string>
    <string name="dt_appointment_txt">Appointment Date &amp; Time</string>
    <string name="meet_txt">Purpose of Appointment</string>
    <string name="constituency">District / Constituency </string>
    <string name="district">District </string>
    <string name="category">Category </string>
    <string name="sub_category">Sub Category </string>
    <string name="upload_photo">Upload Photo </string>
    <string name="description">Description </string>
    <string name="preview">Preview</string>
    <string name="new_photo">New Photo</string>
    <string name="imagedialog">Select to proceed</string>
    <string name="available_date">Available </string>
    <string name="selected_date">Selected </string>
    <string name="loading">Loading...</string>
    <string name="select_cat">Select Category</string>
    <string name="select">Select</string>
    <string name="select_sub_cat">Select SubCategory</string>
    <string name="venu">Venue</string>
    <string name="text_sunday">Sun</string>
    <string name="text_monday">Mon</string>
    <string name="text_tuesday">Tue</string>
    <string name="text_wednesday">Wed</string>
    <string name="text_thrusday">Thur</string>
    <string name="text_friday">Fri</string>
    <string name="text_saturday">Sat</string>
    <string name="grievance_number">Grievance ID: </string>
    <string name="subject">Description :</string>
    <string name="status_">Status</string>
    <string name="status">Status : </string>
    <string name="postedon">Posted On : </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="chx_excellent">Excellent</string>
    <string name="chx_very_good">Very Good</string>
    <string name="chx_good">Good</string>
    <string name="chx_average">Average</string>
    <string name="chx_bad">Bad</string>
    <string name="menu_prof">Profile</string>
    <string name="menu_eshop">E-Shopping</string>
    <string name="menu_survey">Survey &amp; Poll</string>
    <string name="menu_library">E-Library</string>
    <string name="menu_hfa">HFA House</string>
    <string name="menu_municipal">Departments</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_police">Governance Policy</string>
    <string name="title_activity_news_detail">NewsDetailActivity</string>
    <string name="hint_max">Maximum of 200 characters </string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status"></string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
</resources>