<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_rate"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="1">

            <CheckBox
                android:id="@+id/checkbox_excellent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:button="@drawable/checkbox_selector"
                android:onClick="onCheckboxClicked"
                android:text="@string/chx_excellent" />

            <CheckBox
                android:id="@+id/checkbox_very_good"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:button="@drawable/checkbox_selector"
                android:onClick="onCheckboxClicked"
                android:text="@string/chx_very_good" />


            <CheckBox
                android:id="@+id/checkbox_good"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:button="@drawable/checkbox_selector"
                android:onClick="onCheckboxClicked"
                android:text="@string/chx_good" />

            <CheckBox
                android:id="@+id/checkbox_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:button="@drawable/checkbox_selector"
                android:onClick="onCheckboxClicked"
                android:text="@string/chx_average" />

            <CheckBox
                android:id="@+id/checkbox_bad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:button="@drawable/checkbox_selector"
                android:onClick="onCheckboxClicked"
                android:text="@string/chx_bad" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_what"
            android:textColor="@color/black"
            android:textSize="16dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/ed_feedback_des"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="top"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btn_feedback"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/submit_button_bg"
        android:text="@string/btn_submit_appointment"
        android:textColor="@color/text_color" />


</LinearLayout>