<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="#fff"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewNwTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/imagedialog"
        android:textColor="#00322a"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/login_background" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonNwCancel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/button_background_change"
                android:text="@string/preview"
                android:textAllCaps="false" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/dark_gray" />

            <Button
                android:id="@+id/buttonNwOk"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/button_background_change"
                android:text="@string/new_photo"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>