<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_cart"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_cart"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_payment_summery"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_Payment_Summery"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp">

                        <TextView
                            android:id="@+id/tv_subtotal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_payment_summery"
                            android:text="@string/txt_Sub_Total" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right">

                            <TextView
                                android:id="@+id/text_view_subtotal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="10dp"
                                android:text="" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp">

                        <TextView
                            android:id="@+id/tv_shipping_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_Shipping_Amount" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right">

                            <TextView
                                android:id="@+id/text_view_shipping_amount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_marginRight="10dp"
                                android:layout_toLeftOf="@+id/tv_shipping_amount"
                                android:text="0.0" />
                        </LinearLayout>


                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="6dp"
                        android:background="#D5D5D5" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/tv_total_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_TOTAL" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right">

                            <TextView
                                android:id="@+id/text_view_total_amount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_marginRight="10dp"
                                android:layout_toLeftOf="@+id/tv_shipping_amount"
                                android:text=""
                                android:textColor="#D02724"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_cart"
                android:gravity="center_vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_Communication"
                    android:textSize="17sp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="10dp">

                <CheckBox
                    android:id="@+id/checkbox_user_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_As_Registered_details" />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/title_pay_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/name_pay_edtxt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_name"
                        android:inputType="text"
                        android:maxLength="50"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/title_pay_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/email_pay_edtxt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/title_pay_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/address_pay_edtxt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_address"
                        android:inputType="text"
                        android:maxLength="50"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/title_pay_dest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/dest_pay_edtxt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/district"
                        android:inputType="text"
                        android:maxLength="50"
                        android:singleLine="true"
                        android:visibility="gone" />

                </android.support.design.widget.TextInputLayout>

                <fr.ganfra.materialspinner.MaterialSpinner

                    android:id="@+id/spinner_pay_district"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title_address"
                    app:ms_alignLabels="false"
                    app:ms_highlightColor="@color/colorPrimary"
                    app:ms_hintColor="@color/black"
                    app:ms_multiline="false" />


                <!--<android.support.design.widget.TextInputLayout
                    android:id="@+id/title_pay_pincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/pincode_pay_edtxt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_pincode"
                        android:inputType="number"
                        android:maxLength="10"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>-->


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/title_pay_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/number_pay_edtxt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_mobile"
                        android:inputType="number"
                        android:maxLength="10"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/cart_button_background"
                    android:text="Save and proceed"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>
</LinearLayout>